1.16-4.0.0-alpha:
- First port to 1.16.3: alpha!

1.15-3.0.2-alpha:
- Fixed a problem on servers

3.0.1-alpha:
- Avoid generating Lost Cities in biomes that are marked as 'void'
- Avoid a crash with some blocks (beehives) causing out of bounds errors during chunk generation
- mmcgill refined the above fix so the crash testing is actually not really needed

2.0.28-alpha:
- Fixed a crash in Lost Cities loading existing worlds

2.0.27-alpha:
- Added lc_cavern worldtype for cavern style worlds
- The Lost City configuration screen (LC button) will now select 'cavern' as first option if you are using lc_cavern
- New 'Transport' configuration page so that you can configure railways and highways
- The standard profiles as they are saved in the config/lostcity_profiles are now read-only and will be generated again everytime the game starts. You can make a copy of them under a new name and modify it for your own needs
- Nicer Lost City configuration button

2.0.26-alpha:
- Fixed a problem with cities generating under very high biomes. Sometimes pieces of the original landscape were still present
- Potentially fixed an issue correcting block states in a not-fully-generated chunk
- Fixed the check if a biome is an ocean or not
- Fixed the detection of biomes in general
- Lower the stone border a few blocks so it is always covered by terrain (there were sometimes gaps with ocean chunks adjacent to street chunks)
- Clear land above above-ground railway stations

2.0.25-alpha:
- Fixed generation of bridges. They never really appeared
- Slightly changed the offset of lower mesh terrain gen so it always matches (remove configs for this to work)
- Fixed a problem where customizing a profile could cause crashes

2.0.24-alpha:
- Implemented a much better landscape correcting algorithm so that city chunks fit much better with adjacent high mountains or very low ocean chunks
- Vines are now handled in a much more efficient manner. Should avoid the TPS problems people were getting