@@ -5,9 +5,9 @@ projectId=269024
 github_project=McJtyMods/LostCities
 
 
-mcp_mappings=20200916-1.16.2
+mcp_mappings=20201028-1.16.3
 minecraft_version=1.16.3
-forge_version=34.1.23
+forge_version=34.1.42
 
 jei_version=1.16.2:7.1.1.15
 waila_version=1.8.23-B38_1.12
