@@ -1,3 +1,6 @@
+Upcoming:
+- Some serious optimizations which will improve the speed of worldgen in combination with lost cities
+
 1.16-4.0.0-alpha:
 - First port to 1.16.3: alpha!
 
